# chess

./: .gitignore  README.md  app.js
bots/: CMakeLists.txt  CMakePresets.json
bots/random_move_bot/: CMakeLists.txt
bots/random_move_bot/src/: common.hpp  game_state.cpp  game_state.hpp  main.cpp  search.cpp  search.hpp  util.cpp  util.hpp
web/: client.html  script.js  styles.css
